QUICK UPDATE of work exploring parameters

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         top: 0;
         bottom: 0;
         overflow-y: auto;
-        background: white;
+        background:maroon;
         padding: 0.5em;
         box-sizing: border-box;
       }
